projects/compiler/test/typechecker/return/error_unreachable_stmt_match_outside.out
Error at %FILE_NAME%:7:3
Return type mismatch for function 'foo'
  |    val x = 123
       ^
Expected Int
but instead found Unit
